--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "knex": "^0.20.8",
     "lodash": "^4.17.15",
