--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha --recursive",
-    "lint": "eslint"
+    "lint": "eslint ./"
   },
   "author": "Tarun Chari",
   "license": "ISC",
