--- a/api/config.json
+++ b/api/config.json
@@ -1,3 +1,8 @@
 {
-  "thisYearStartDate": "2020-01-27"
+  "thisYearStartDate": "2020-01-27",
+  "stockApi": {
+    "scheme": "https",
+    "domain": "api.worldtradingdata.com",
+    "path": "/api/v1/history_multi_single_day"
+  }
 }
