--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mysql": "^2.18.1",
+    "query-string": "^6.10.1",
     "yup": "^0.28.1"
   },
   "devDependencies": {
