--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "knex": "^0.20.8",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "query-string": "^6.10.1",
     "yup": "^0.28.1"
