--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.8",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
