--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
+    "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.17",
